--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,4 @@
 {
-  "packages": ["packages/*", "targets/*/*"],
+  "packages": ["packages/*", "packages/database/*", "targets/*/*"],
   "version": "0.0.0"
 }
