--- a/packages/database/level/package.json
+++ b/packages/database/level/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@todolist/core",
-  "description": "The core todolist system",
+  "name": "@todolist.databases/level",
+  "description": "The Level todolist database",
   "version": "1.0.0",
   "private": true,
   "main": "lib/index.js",
@@ -11,8 +11,11 @@
     "watch": "tsc --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "inversify": "^5.0.1",
-    "reflect-metadata": "^0.1.12"
+    "@types/leveldown": "^4.0.0",
+    "@types/levelup": "^3.1.0",
+    "level": "4.0.0",
+    "leveldown": "^4.0.1",
+    "levelup": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.11",
