--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2018",
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
     "module": "commonjs",
+    "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": true
+    "target": "es2018"
   }
 }
