--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "strict": true,
