--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,11 +11,11 @@
     "watch": "yarn build --watch --preserveWatchOutput"
   },
   "dependencies": {
-    "inversify": "^5.0.1",
-    "reflect-metadata": "^0.1.12"
+    "ramda": "^0.26.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
+    "@types/ramda": "^0.25.46",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
