--- a/packages/ui/yargs/package.json
+++ b/packages/ui/yargs/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "@todolist/core": "^1.0.0",
+    "dedent": "^0.7.0",
     "ramda": "^0.26.1",
+    "s-ago": "^2.0.1",
     "tslib": "^1.9.3",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "@types/ramda": "^0.25.46",
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^23.3.12",
+    "@types/ramda": "^0.25.46",
     "@types/yargs": "^12.0.5",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.5",
