--- a/packages/ui/vanilla/tsconfig.json
+++ b/packages/ui/vanilla/tsconfig.json
@@ -1,10 +1,14 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": true,
+    "composite": true,
     "outDir": "lib",
-    "resolveJsonModule": true
+    "rootDir": "src"
   },
-  "files": ["src/index.ts"]
+  "exclude": ["**/__test__", "lib", "node_modules"],
+  "references": [
+    {
+      "path": "../../core"
+    }
+  ]
 }
