--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": ".",
-    "declaration": true,
-    "outDir": "lib"
+    "composite": true,
+    "outDir": "lib",
+    "rootDir": "src"
   },
-  "files": ["src/index.ts"],
-  "include": ["src/**/*"]
+  "exclude": ["**/__test__", "lib", "node_modules"]
 }
