--- a/targets/web/vanilla/tsconfig.json
+++ b/targets/web/vanilla/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../../tsconfig.base.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "noEmit": true
   },
   "files": ["src/index.ts"],
   "include": ["src/**/*"]
