--- a/framework/docs/modules/commands/package.json
+++ b/framework/docs/modules/commands/package.json
@@ -19,13 +19,16 @@
   "devDependencies": {
     "@douglasduteil/framework.tools": "link:../../../tools",
     "@socialgouv/eslint-config-typescript": "^1.58.0",
+    "@tsconfig/node14": "^1.0.0",
+    "@types/node": "^14.14.34",
+    "@types/yargs": "^16",
     "eslint": "^7.19.0",
     "jest": "^26.6.3",
     "typescript": "^4.1.5"
   },
   "scripts": {
     "precommit": "lint-staged",
-    "build": "tsc -",
+    "build": "tsc -p tsconfig.build.json",
     "lint": "eslint src/index.ts",
     "lint:fix": "yarn lint --fix",
     "prepush": "yarn lint && yarn test",
@@ -48,5 +51,9 @@
   },
   "jest": {
     "preset": "@douglasduteil/framework.tools"
+  },
+  "dependencies": {
+    "tslib": "^2.1.0",
+    "yargs": "^16.2.0"
   }
 }
