--- a/framework/docs/modules/commands/tsconfig.json
+++ b/framework/docs/modules/commands/tsconfig.json
@@ -9,7 +9,7 @@
     "importHelpers": true,
     "sourceMap": true,
     "moduleResolution": "Node",
-    "module": "esnext",
+    "module": "ES2020",
     "outDir": "lib",
     "rootDir": "src",
     "types": ["node", "jest"]
