--- a/framework/docs/targets/cli/package.json
+++ b/framework/docs/targets/cli/package.json
@@ -40,7 +40,7 @@
   "eslintConfig": {
     "extends": "@socialgouv/eslint-config-typescript",
     "ignorePatterns": [
-      "**/lib/**"
+      "**/dist/**"
     ]
   },
   "devDependencies": {
